[package]
name = "espylights"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.3.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.2.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.9", optional = true }
esp-println = { version = "0.3.1", features = ["esp32c3"] }
palette = { version = "0.6.1", default-features = false, features = ["libm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[features]
default = ["rt"]
rt = ["riscv-rt"]
